@@ -1,3 +1,7 @@
+Tue Jun 27 17:37:16 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Added ability to get writable databases from database manager.
+
 Tue Jun 27 11:19:01 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Added test for requiring -nsl (eg, on solaris).
